<?xml version="1.0" encoding="UTF-8"?>
<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor
	license agreements. See the NOTICE file distributed with this work for additional
	information regarding copyright ownership. The ASF licenses this file to
	you under the Apache License, Version 2.0 (the "License"); you may not use
	this file except in compliance with the License. You may obtain a copy of
	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
	by applicable law or agreed to in writing, software distributed under the
	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
	OF ANY KIND, either express or implied. See the License for the specific
	language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>at.ac.univie.nutrition.dita</groupId>
	<artifactId>dita-bom</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	
	<name>Dita (Umbrella)</name>
	<description>Open Scientific Nutrition and Dietary Assessment (Umbrella)</description>
	<url>https://github.com/univie-nutrition/dita</url>

	<packaging>pom</packaging>

	<properties>
		<maven.compiler.release>17</maven.compiler.release>
		<maven.compiler.arg>-parameters</maven.compiler.arg>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<spring-boot.version>3.1.4</spring-boot.version>
<!--		<causeway.version>3.0.0-M1.20230509-0607-5f90bb6a</causeway.version>-->
		<causeway.version>3.0.0-SNAPSHOT</causeway.version>
		
		<indriya-version>2.1.3</indriya-version>
		<junit-version>[5,)</junit-version>
		<lombok-version>1.18.30</lombok-version>
		
		<mariadb-jdbc.version>3.1.4</mariadb-jdbc.version>
		<mssql-jdbc.version>7.4.1.jre8</mssql-jdbc.version>
		<!-- testing -->
		<surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
	</properties>

	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
            <testResource>
                <filtering>false</filtering>
                <directory>src/test/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<compilerArgs>
						<arg>${maven.compiler.arg}</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok-version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
                        <printSummary>false</printSummary>
                        <argLine>${surefire-plugin.argLine}</argLine>
                        <forkCount>1C</forkCount>
                        <reuseForks>true</reuseForks>
                        <systemPropertyVariables>
                            <!-- allows tests to reduce verbosity, or conditionally disable
                                 when run with surefire; e.g.:
                                 @DisabledIfSystemProperty(named = "isRunningWithSurefire", matches = "true")
                                 -->
                            <isRunningWithSurefire>true</isRunningWithSurefire>
                        </systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>

			<!-- SUB MODULES -->

			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-commons</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-causeway-replicator</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-foodex-validator-api</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-foodex-validator-service</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-globodiet-manager</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-globodiet-params</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-globodiet-schema</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>at.ac.univie.nutrition.recall24</groupId>
				<artifactId>dita-recall24</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			
			<dependency>
				<groupId>at.ac.univie.nutrition.dita</groupId>
				<artifactId>dita-tooling</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			
			<!-- MEASURE API -->

			<dependency>
			    <groupId>tech.units</groupId>
			    <artifactId>indriya</artifactId>
			    <version>${indriya-version}</version>
			</dependency>
			
			<!-- APACHE CAUSEWAY -->
			
			<dependency>
				<groupId>org.apache.causeway.commons</groupId>
				<artifactId>causeway-commons</artifactId>
				<version>${causeway.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.causeway.core</groupId>
				<artifactId>causeway-applib</artifactId>
				<version>${causeway.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.causeway.core</groupId>
				<artifactId>causeway-core-metamodel</artifactId>
				<version>${causeway.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.causeway.persistence</groupId>
				<artifactId>causeway-persistence-jdo-applib</artifactId>
				<version>${causeway.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.causeway.viewer</groupId>
				<artifactId>causeway-viewer-restfulobjects-client</artifactId>
				<version>${causeway.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.causeway.extensions</groupId>
				<artifactId>causeway-extensions-docgen</artifactId>
				<version>${causeway.version}</version>
			</dependency>
			
			<dependency>
				<groupId>org.apache.causeway.app</groupId>
				<artifactId>causeway-app-starter-parent</artifactId>
				<version>${causeway.version}</version>
				<type>pom</type>
	            <scope>import</scope>
	        </dependency>
	        
	        <!-- UNPUBLISHED -->
	        
	        <dependency>
			    <groupId>org.apache.causeway.tooling</groupId>
			    <artifactId>causeway-tooling-model4adoc</artifactId>
			    <version>${causeway.version}</version>
			</dependency>
			
			<!-- SPRING -->
			
			<dependency>
            	<groupId>org.springframework.boot</groupId>
            	<artifactId>spring-boot-starter-web</artifactId>
            	<version>${spring-boot.version}</version>
            </dependency>

	        <dependency>
	            <groupId>org.springframework.boot</groupId>
	            <artifactId>spring-boot-dependencies</artifactId>
	            <version>${spring-boot.version}</version>
	            <type>pom</type>
	            <scope>import</scope>
	        </dependency>
	        
	        <!-- JDBC -->
	        
            <dependency>
                <groupId>com.microsoft.sqlserver</groupId>
                <artifactId>mssql-jdbc</artifactId>
                <version>${mssql-jdbc.version}</version>
            </dependency>
            <dependency>
			    <groupId>org.mariadb.jdbc</groupId>
			    <artifactId>mariadb-java-client</artifactId>
			    <version>${mariadb-jdbc.version}</version>
			</dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
	    		<artifactId>postgresql</artifactId>
				<!-- version already managed -->
            </dependency>

			<!-- OTHER -->

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok-version}</version>
			</dependency>
		
			<!-- TESTING -->
			
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
	    		<groupId>org.junit.jupiter</groupId>
	    		<artifactId>junit-jupiter-params</artifactId>
	    		<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		
		<!-- TESTING -->
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		
	</dependencies>
	
	<modules>
		<module>commons</module>
		<module>causeway</module>
		<module>foodex</module>
		<module>globodiet</module>
		<module>recall24</module>
		<module>tooling</module>
	</modules>
	
	<!-- META DATA -->
	
	<inceptionYear>Nov 2022</inceptionYear>
    <scm>
        <url>https://github.com/univie-nutrition/dita</url>
        <tag>HEAD</tag>
    </scm>
	    <issueManagement>
        <system>Jira</system>
        <url>https://issues.apache.org/jira/browse/CAUSEWAY</url>
    </issueManagement>
    <ciManagement>
        <system>CI</system>
        <url>https://github.com/univie-nutrition/dita</url>
    </ciManagement>
    <developers>
        <developer>
            <id>ahuber</id>
            <name>Andi Huber</name>
            <email>a.huber@corax.at</email>
            <roles>
                <role>committer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>
    
</project>
